--- a/04-Analyse/Analyse.tex
+++ b/04-Analyse/Analyse.tex
@@ -69,6 +69,9 @@ $$
 Cenpendant, on peut aussi considérer que le modèle n'est plus réductible en une seule dimension cachée.
 Il est donc intéressant de regarder comment les cartes considèrent le bruit : a-t-on toujours une quantification vectorielle du cercle, ou la carte se déplie t-elle autrement ? Autrement dit, une carte sépare t-elle le bruit de la forme des entrées ?
 
+Pour le vérifier, on peut, à partir des poids appris sur des données bruitées, réaliser les tests sur des données non bruitée, donc un cercle. 
+Dans ce cas, la prédiction est semblable au cas ou les cartes ont appris le cercle : la quantification est résistante au bruit.
+
 \section{Entrées dans un carré}
 
 \subsubsection{Expérience}
@@ -95,8 +98,7 @@ Cependant, les poids sont un peu différent de l'expérience avec X,Y sur un cer
 
 
 \section{Entrées en clusters}
-
-On considère des entrées $X$, $Y$ distribuées dans $[0,1]^2$, telles que les points sont regroupés autour de 6 centres. Autour de ces centres, les points sont tirés aléatoirement dans un cercle. On a donc des clusters de points. La distribution de $(X,Y)$ peut être considérée comme fonction des centres des clusters.  A-t-on un regroupement des points des clusters dans la carte, ou la carte se déplie t-elle sans prendre en compte les regroupement ? Nous présentons ici deux expériences, chacune prenant des entrées distribuées selon des taille  sifférentes de clusters autour de leurs centres, tracées en figure~\ref{fig:cluster_in}.  $U$ est ici considéré comme l'indice (entre 0 et 1) du cluster.
+On considère des entrées $X$, $Y$ distribuées dans $[0,1]^2$, telles que les points sont regroupés autour de 6 centres. Autour de ces centres, les points sont tirés aléatoirement dans un cercle. On a donc des clusters de points. La distribution de $(X,Y)$ peut être considérée comme fonction des centres des clusters.  A-t-on un regroupement des points des clusters dans la carte, ou la carte se déplie t-elle sans prendre en compte les regroupement ? Nous présentons ici deux expériences, chacune prenant des entrées distribuées selon des tailles différentes de clusters autour de leurs centres, tracées en figure~\ref{fig:cluster_in}.  $U$ est ici considéré comme l'indice (entre 0 et 1) du cluster.
 
 \begin{figure}[h!]
 \begin{minipage}{0.5\textwidth}
@@ -211,6 +213,7 @@ Pour la version 3D, on a une carte centrale.
 \caption{Poids et dépliement de trois cartes connectées avec une intermédiaire et information mutuelle. Les cartes 1,2,3 recoivent des entrées, la carte 4 les connecte.}
 \label{fig:3som_star}
 \end{figure}
+
 Les coefficients d'incertitudes sont ici un élément de comparaison particulièrement bon entre les cartes. Les relations entre les entrées $X$, $Y$ sont identiques, on a en effet la même distribution. 
 On peut porter notre attention sur $UC(I1|M1)$ dans les deux cas : ce coefficient est plus élevé dans le cas 2.
 Cela traduit une meilleure quantification vectorielle par les cartes ayant une entrée externe lorsqu'on met 2 cartes intermédiaires qu'une seule. On se rapproche en fait d'une architecture dans laquelle les cartes ne seraient pas connectées. Il semblerait donc que seules les connexions directes soient vraiment utiles. 
@@ -228,17 +231,14 @@ On peut donc imaginer utiliser des cartes centrales dans ce genre d'architecture
 
 
 
-
 \subsection{Boucle vs rétroaction à trois cartes}
-
-On a vu avec les cartes intermédiaires que les connexions lointaines semblent jouer un role moins important dans la dynamique que les connexions directe. Ainsi, on peut regarder comment se comporte une architecture de trois cartes connectées en boucle. 
+On a vu avec les cartes intermédiaires que les connexions lointaines semblent jouer un role moins important dans la dynamique que les connexions directe. Ainsi, on peut regarder comment se comporte une architecture de trois cartes connectées en boucle.
 
 
 \subsection{Conclusion et perspectives: influence de l'architecture}
 
-\section{Influence des paramètres des cartes}
 
-Dans cette section, 
+\section{Influence des paramètres des cartes}
 
 \subsection{rayons de voisinage}
 
